@@ -1,3 +1,7 @@
+10/15/25:
+
+- Create Cart tests
+
 10/14/25:
 
 - Create Items tests
